--- a/index.html
+++ b/index.html
@@ -591,8 +591,7 @@
           © 2025 SwiftPro. Todos os direitos reservados.
         </div>
         <div class="d-flex align-items-center gap-3">
-          <a class="small text-decoration-none" href="#">Termos</a>
-          <a class="small text-decoration-none" href="#">Privacidade</a>
+          <a class="small text-decoration-none" href="termo.html">Termos</a>
           <a class="small text-decoration-none" href="#">Ajuda</a>
         </div>
       </div>
