--- a/plano.html
+++ b/plano.html
@@ -33,7 +33,7 @@
           href="index.html"
         >
           <i class="bi bi-fire text-brand"></i>
-          <strong>SwiftPro</strong>
+          <strong>Home</strong>
         </a>
         <button
           class="navbar-toggler"
@@ -278,8 +278,7 @@
           © 2025 SwiftPro. Todos os direitos reservados.
         </div>
         <div class="d-flex align-items-center gap-3">
-          <a class="small text-decoration-none" href="#">Termos</a>
-          <a class="small text-decoration-none" href="#">Privacidade</a>
+          <a class="small text-decoration-none" href="termo.html">Termos</a>
           <a class="small text-decoration-none" href="#">Ajuda</a>
         </div>
       </div>
