--- a/config.html
+++ b/config.html
@@ -35,7 +35,7 @@
           href="index.html"
         >
           <i class="bi bi-fire text-brand"></i>
-          <strong>Home</strong>
+          <strong>SwiftPro</strong>
         </a>
         <button
           class="navbar-toggler"
@@ -60,15 +60,7 @@
           </div>
           <div class="offcanvas-body">
             <ul class="navbar-nav ms-auto align-items-lg-center gap-lg-3">
-              <li class="nav-item">
-                <a class="nav-link" href="ranking.html">Ranking</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="missoes.html">Missões</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="plano.html">Trilha de Aprendizagem</a>
-              </li>
+              <!-- Itens removidos para visão do gerente -->
               <li class="nav-item">
                 <a class="nav-link" href="gerente.html">Área do Gerente</a>
               </li>
@@ -131,16 +123,7 @@
                       ><i class="bi bi-gear me-2"></i>Configurações</a
                     >
                   </li>
-                  <li>
-                    <a class="dropdown-item" href="historico.html"
-                      ><i class="bi bi-clock-history me-2"></i>Histórico</a
-                    >
-                  </li>
-                  <li data-manager-only>
-                    <a class="dropdown-item" href="gerente.html"
-                      ><i class="bi bi-person-gear me-2"></i>Área do Gerente</a
-                    >
-                  </li>
+                  <!-- Itens removidos para visão do gerente -->
                   <li><hr class="dropdown-divider" /></li>
                   <li>
                     <a class="dropdown-item" href="#" data-logout
@@ -274,7 +257,7 @@
         </div>
         <div class="d-flex align-items-center gap-3">
           <a class="small text-decoration-none" href="termo.html">Termos</a>
-          <a class="small text-decoration-none" href="#">Ajuda</a>
+          <a class="small text-decoration-none" href="formulario_ajuda.html">Ajuda</a>
         </div>
       </div>
     </footer>
