--- a/formulario_ajuda.html
+++ b/formulario_ajuda.html
@@ -5,9 +5,146 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulário de Ajuda</title>
     <link href="assets/css/style.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+            <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet" />
+            <script defer src="https://unpkg.com/lucide@latest"></script>
+            <link rel="stylesheet" href="assets/css/style.css" />
+
+            <!-- Sistema de Autenticação -->
+            <script src="assets/js/auth.js"></script>
+            <script>
+                // Proteger página - qualquer usuário logado pode acessar
+                window.checkPageAccess && window.checkPageAccess();
+            </script>
 </head>
 <body>
+        <nav
+            class="navbar navbar-expand-lg sticky-top"
+            aria-label="Navegação principal"
+        >
+            <div class="container">
+                <a
+                    class="navbar-brand d-flex align-items-center gap-2"
+                    href="index.html"
+                >
+                    <i class="bi bi-fire text-brand"></i>
+                      <strong>SwiftPro</strong>
+                </a>
+                <button
+                    class="navbar-toggler"
+                    type="button"
+                    data-bs-toggle="offcanvas"
+                    data-bs-target="#navOffcanvas"
+                    aria-controls="navOffcanvas"
+                    aria-label="Abrir menu"
+                >
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="offcanvas offcanvas-end" tabindex="-1" id="navOffcanvas">
+                    <div class="offcanvas-header">
+                        <h5 class="offcanvas-title">Menu</h5>
+                        <button
+                            type="button"
+                            class="btn-close"
+                            data-bs-dismiss="offcanvas"
+                            aria-label="Fechar"
+                        ></button>
+                    </div>
+                    <div class="offcanvas-body">
+                        <ul class="navbar-nav ms-auto align-items-lg-center gap-lg-3">
+                            <li class="nav-item">
+                                <a class="nav-link" href="ranking.html">Ranking</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="missoes.html">Missões</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="plano.html">Trilha de Aprendizagem</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="gerente.html">Área do Gerente</a>
+                            </li>
+                        </ul>
+                        <div class="d-flex gap-2 ms-lg-3 mt-3 mt-lg-0 align-items-center">
+                            <!-- Sininho de notificação -->
+                            <div class="nav-item dropdown position-relative me-2">
+                                <a href="#" class="nav-link p-0" id="notificationDropdown" data-bs-toggle="dropdown" aria-expanded="false" title="Notificações" role="button">
+                                    <i class="bi bi-bell-fill fs-4 text-brand"></i>
+                                    <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger" style="font-size:0.7em;">
+                                        3
+                                        <span class="visually-hidden">notificações não lidas</span>
+                                    </span>
+                                </a>
+                                <ul class="dropdown-menu dropdown-menu-end mt-2" aria-labelledby="notificationDropdown" style="min-width: 280px;">
+                                    <li class="dropdown-header">Notificações</li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li><a class="dropdown-item" href="missoes.html"><strong>Nova missão criada pelo gerente</strong></a></li>
+                                    <li><a class="dropdown-item" href="ranking.html"><strong>Você subiu de posição no ranking!</strong></a></li>
+                                    <li><a class="dropdown-item" href="#"><strong>Disputa resolvida pelo gerente</strong></a></li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li><a class="dropdown-item text-center text-muted" href="#">Ver todas</a></li>
+                                </ul>
+                            </div>
+                            <!-- Menu dropdown do usuário -->
+                            <div class="dropdown text-end">
+                                <a
+                                    href="#"
+                                    class="d-flex align-items-center text-decoration-none dropdown-toggle"
+                                    data-bs-toggle="dropdown"
+                                    aria-expanded="false"
+                                >
+                                    <img
+                                        src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?w=32&h=32&fit=crop&crop=face&auto=format"
+                                        alt="Avatar do usuário"
+                                        width="32"
+                                        height="32"
+                                        class="rounded-circle me-2"
+                                        data-user-avatar
+                                    />
+                                    <span class="d-none d-lg-inline-block" data-user-name
+                                        >Usuário</span
+                                    >
+                                </a>
+                                <ul class="dropdown-menu text-small">
+                                    <li class="dropdown-header">
+                                        <div class="fw-semibold" data-user-name>Usuário</div>
+                                        <small class="text-muted" data-user-email
+                                            >usuario@swift.com</small
+                                        >
+                                        <small class="text-muted d-block" data-user-role
+                                            >Carregando...</small
+                                        >
+                                    </li>
+                                    <li><hr class="dropdown-divider" /></li>
+                                    <li>
+                                        <a class="dropdown-item" href="config.html"
+                                            ><i class="bi bi-gear me-2"></i>Configurações</a
+                                        >
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="historico.html"
+                                            ><i class="bi bi-clock-history me-2"></i>Histórico</a
+                                        >
+                                    </li>
+                                    <li data-manager-only>
+                                        <a class="dropdown-item" href="gerente.html"
+                                            ><i class="bi bi-person-gear me-2"></i>Área do Gerente</a
+                                        >
+                                    </li>
+                                    <li><hr class="dropdown-divider" /></li>
+                                    <li>
+                                        <a class="dropdown-item" href="#" data-logout
+                                            ><i class="bi bi-box-arrow-right me-2"></i>Sair</a
+                                        >
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </nav>
     <div class="container mt-5">
         <h2 class="mb-4">Fale com o Suporte</h2>
         <form id="formAjuda" class="card p-4 shadow-sm">
@@ -25,18 +162,30 @@
             </div>
             <button type="submit" class="btn btn-primary">Enviar</button>
         </form>
-        <div id="mensagemSucesso" class="alert alert-success mt-3 d-none" role="alert">
-            Mensagem enviada com sucesso! Em breve o suporte entrará em contato.
+                <div id="mensagemSucesso" class="alert alert-success mt-3 d-none" role="alert">
+                        Mensagem enviada com sucesso! Em breve o suporte entrará em contato.
+                </div>
         </div>
-    </div>
-    <script>
-        document.getElementById('formAjuda').addEventListener('submit', function(event) {
-            event.preventDefault();
-            // Aqui você pode integrar com um serviço de e-mail real, como EmailJS, Formspree, etc.
-            // Por enquanto, apenas exibe mensagem de sucesso
-            document.getElementById('mensagemSucesso').classList.remove('d-none');
-            document.getElementById('formAjuda').reset();
-        });
-    </script>
-</body>
-</html>
+
+        <!-- Rodapé -->
+        <footer class="footer mt-5 py-3 bg-light border-top">
+            <div class="container d-flex flex-column flex-md-row justify-content-between align-items-center gap-2">
+                <span class="text-muted small">&copy; 2025 SwiftPro. Todos os direitos reservados.</span>
+                <div class="d-flex gap-3">
+                    <a class="small text-decoration-none" href="termo.html">Termos de Uso</a>
+                    <a class="small text-decoration-none" href="formulario_ajuda.html">Ajuda</a>
+                </div>
+            </div>
+        </footer>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="assets/js/main.js"></script>
+        <script>
+            document.getElementById('formAjuda').addEventListener('submit', function(event) {
+                event.preventDefault();
+                // Aqui você pode integrar com um serviço de e-mail real, como EmailJS, Formspree, etc.
+                // Por enquanto, apenas exibe mensagem de sucesso
+                document.getElementById('mensagemSucesso').classList.remove('d-none');
+                document.getElementById('formAjuda').reset();
+            });
+        </script>
+    </body>
