--- a/historico.html
+++ b/historico.html
@@ -33,7 +33,7 @@
           href="index.html"
         >
           <i class="bi bi-fire text-brand"></i>
-          <strong>Home</strong>
+          <strong>SwiftPro</strong>
         </a>
         <button
           class="navbar-toggler"
@@ -58,15 +58,7 @@
           </div>
           <div class="offcanvas-body">
             <ul class="navbar-nav ms-auto align-items-lg-center gap-lg-3">
-              <li class="nav-item">
-                <a class="nav-link" href="ranking.html">Ranking</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="missoes.html">Missões</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="plano.html">Trilha de Aprendizagem</a>
-              </li>
+              <!-- Itens removidos para visão do gerente -->
               <li class="nav-item">
                 <a class="nav-link" href="gerente.html">Área do Gerente</a>
               </li>
@@ -263,7 +255,7 @@
         </div>
         <div class="d-flex align-items-center gap-3">
           <a class="small text-decoration-none" href="termo.html">Termos</a>
-          <a class="small text-decoration-none" href="#">Ajuda</a>
+          <a class="small text-decoration-none" href="formulario_ajuda.html">Ajuda</a>
         </div>
       </div>
     </footer>
