--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
       <div class="container">
         <div class="row align-items-start g-4">
           <div class="col-12 col-lg-5">
-            <div class="card soft-shadow">
+            <div class="card soft-shadow mb-4">
               <div class="card-body d-flex align-items-center gap-3">
                 <img
                   src="https://images.unsplash.com/photo-1517841905240-472988babdf9?q=80&w=400&auto=format&fit=crop"
@@ -212,6 +212,39 @@
               </div>
             </div>
 
+            <div class="row g-3">
+              <div class="col-12 col-lg-8">
+                <div class="card soft-shadow border-0 rounded-4 p-4 bg-white h-100">
+                  <div class="d-flex align-items-center mb-2">
+                    <i class="bi bi-mortarboard text-brand fs-3 me-2"></i>
+                    <h5 class="fw-bold mb-0">Trilha de Aprendizagem</h5>
+                  </div>
+                  <div class="mb-2 text-muted">Resumo da sua jornada de aprendizado, missões e progresso na trilha.</div>
+                  <ul class="list-unstyled mb-3">
+                    <li><i class="bi bi-check-circle text-success me-1"></i> 3 módulos concluídos</li>
+                    <li><i class="bi bi-flag text-primary me-1"></i> 2 missões em andamento</li>
+                    <li><i class="bi bi-trophy text-warning me-1"></i> 1 conquista desbloqueada</li>
+                  </ul>
+                  <div class="d-flex gap-2 align-items-center">
+                    <a href="plano.html" class="btn btn-primary btn-sm rounded-0">Ver trilha completa</a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-12 col-lg-4">
+                <div class="card soft-shadow border-0 rounded-4 p-4 bg-white h-100 text-center">
+                  <div class="mb-2">
+                    <i class="bi bi-star-fill text-warning fs-2"></i>
+                  </div>
+                  <div class="kpi text-brand mb-1">2.350</div>
+                  <div class="kpi-sub mb-2">Pontos na trilha</div>
+                  <div class="mb-2">
+                    <i class="bi bi-calendar-check text-success fs-5"></i>
+                  </div>
+                  <div class="kpi text-success mb-1">7</div>
+                  <div class="kpi-sub">Dias de estudo consecutivos</div>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="col-12 col-lg-7">
             <div class="card soft-shadow">
@@ -253,20 +286,7 @@
                   id="roleTab"
                   role="tablist"
                 >
-                  <li class="nav-item" role="presentation">
-                    <button
-                      class="nav-link active"
-                      id="colab-tab"
-                      data-bs-toggle="pill"
-                      data-bs-target="#colab"
-                      type="button"
-                      role="tab"
-                      aria-controls="colab"
-                      aria-selected="true"
-                    >
-                      <i class="bi bi-person-badge me-1"></i> Colaborador
-                    </button>
-                  </li>
+                  <!-- Botão Colaborador removido -->
                   <li class="nav-item" role="presentation" data-manager-only>
                     <button
                       class="nav-link"
@@ -592,7 +612,7 @@
         </div>
         <div class="d-flex align-items-center gap-3">
           <a class="small text-decoration-none" href="termo.html">Termos</a>
-          <a class="small text-decoration-none" href="#">Ajuda</a>
+          <a class="small text-decoration-none" href="formulario_ajuda.html">Ajuda</a>
         </div>
       </div>
     </footer>
