--- a/missoes.html
+++ b/missoes.html
@@ -33,7 +33,7 @@
           href="index.html"
         >
           <i class="bi bi-fire text-brand"></i>
-          <strong>Home</strong>
+          <strong>SwiftPro</strong>
         </a>
         <button
           class="navbar-toggler"
@@ -346,7 +346,7 @@
         </div>
         <div class="d-flex align-items-center gap-3">
           <a class="small text-decoration-none" href="termo.html">Termos</a>
-          <a class="small text-decoration-none" href="#">Ajuda</a>
+          <a class="small text-decoration-none" href="formulario_ajuda.html">Ajuda</a>
         </div>
       </div>
     </footer>
