--- a/termo.html
+++ b/termo.html
@@ -13,7 +13,7 @@
       <div class="container">
         <a class="navbar-brand d-flex align-items-center gap-2" href="index.html">
           <i class="bi bi-fire text-brand"></i>
-          <strong>Home</strong>
+          <strong>SwiftPro</strong>
         </a>
         <button
           class="navbar-toggler"
@@ -163,7 +163,7 @@
         <div class="text-muted small">© 2025 SwiftPro. Todos os direitos reservados.</div>
         <div class="d-flex align-items-center gap-3">
           <a class="small text-decoration-none" href="termo.html">Termos</a>
-          <a class="small text-decoration-none" href="#">Ajuda</a>
+          <a class="small text-decoration-none" href="formulario_ajuda.html">Ajuda</a>
         </div>
       </div>
     </footer>
