pagina estoquista adicionada

--- a/termo.html
+++ b/termo.html
@@ -43,13 +43,14 @@
           </div>
           <div class="offcanvas-body">
             <ul class="navbar-nav ms-auto align-items-lg-center gap-lg-3">
-              <!-- Itens removidos para visão do gerente -->
               <li class="nav-item">
-                <a class="nav-link" href="gerente.html">Área do Gerente</a>
+                <a class="nav-link" href="ranking.html">Ranking</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="missoes.html">Missões</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="plano.html">Trilha de Aprendizagem</a>
               </li>
             </ul>
             <div class="d-flex gap-2 ms-lg-3 mt-3 mt-lg-0 align-items-center">
@@ -101,6 +102,9 @@
                   <li><hr class="dropdown-divider" /></li>
                   <li>
                     <a class="dropdown-item" href="config.html"><i class="bi bi-gear me-2"></i>Configurações</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="historico.html"><i class="bi bi-clock-history me-2"></i>Histórico</a>
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
