--- a/historico.html
+++ b/historico.html
@@ -62,13 +62,14 @@
           </div>
           <div class="offcanvas-body">
             <ul class="navbar-nav ms-auto align-items-lg-center gap-lg-3">
-              <!-- Itens removidos para visão do gerente -->
               <li class="nav-item">
-                <a class="nav-link" href="gerente.html">Área do Gerente</a>
+                <a class="nav-link" href="ranking.html">Ranking</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="missoes.html">Missões</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="plano.html">Trilha de Aprendizagem</a>
               </li>
             </ul>
             <div class="d-flex gap-2 ms-lg-3 mt-3 mt-lg-0 align-items-center">
