--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
           <div class="offcanvas-body">
             <ul class="navbar-nav ms-auto align-items-lg-center gap-lg-3">
               <li class="nav-item">
+                <a class="nav-link" href="estoquista.html">Estoquista</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="ranking.html">Ranking</a>
               </li>
               <li class="nav-item">
