Adiciona o usuário estoquista e corrige posicionamento do footer

--- a/config.html
+++ b/config.html
@@ -144,7 +144,8 @@
       </div>
     </nav>
 
-    <section id="config" class="py-5">
+    <div class="main-content">
+      <section id="config" class="py-5">
       <div class="container">
         <h2 class="h4 mb-3">Configurações</h2>
         <div class="row g-3">
@@ -254,6 +255,8 @@
         </div>
       </div>
     </section>
+    </div>
+
     <footer class="py-4 mt-4">
       <div
         class="container d-flex flex-column flex-md-row align-items-center justify-content-between gap-2"
