--- a/historico.html
+++ b/historico.html
@@ -152,7 +152,8 @@
       </div>
     </nav>
 
-    <section id="historico" class="py-5">
+    <div class="main-content">
+      <section id="historico" class="py-5">
       <div class="container">
         <h2 class="h4 mb-3">Histórico</h2>
         <div class="mb-3">
@@ -253,6 +254,8 @@
         </div>
       </div>
     </section>
+    </div>
+
     <footer class="py-4 mt-4">
       <div class="container d-flex flex-column flex-md-row align-items-center justify-content-between gap-2">
         <div class="text-muted small">
