--- a/missoes.html
+++ b/missoes.html
@@ -159,7 +159,8 @@
       </div>
     </nav>
 
-    <section id="missoes" class="py-5">
+    <div class="main-content">
+      <section id="missoes" class="py-5">
       <div class="container">
         <div class="d-flex align-items-center justify-content-between mb-3">
           <h2 class="h4 m-0">Missões</h2>
@@ -343,6 +344,8 @@
         </div>
       </div>
     </section>
+    </div>
+
     <footer class="py-4 mt-4">
       <div class="container d-flex flex-column flex-md-row align-items-center justify-content-between gap-2">
         <div class="text-muted small">
