--- a/plano.html
+++ b/plano.html
@@ -159,7 +159,8 @@
       </div>
     </nav>
 
-  <section id="trilha" class="py-5">
+    <div class="main-content">
+      <section id="trilha" class="py-5">
       <div class="container">
   <h2 class="h4">Trilha de Aprendizagem</h2>
         <div class="row g-3">
@@ -276,6 +277,8 @@
         </div>
       </div>
     </section>
+    </div>
+
     <footer class="py-4 mt-4">
       <div class="container d-flex flex-column flex-md-row align-items-center justify-content-between gap-2">
         <div class="text-muted small">
