--- a/ranking.html
+++ b/ranking.html
@@ -159,7 +159,8 @@
       </div>
     </nav>
 
-    <section id="ranking" class="py-5">
+    <div class="main-content">
+      <section id="ranking" class="py-5">
       <div class="container">
         <div class="d-flex align-items-center justify-content-between mb-3">
           <h2 class="h4 m-0">Ranking</h2>
@@ -237,6 +238,8 @@
         </div>
       </div>
     </section>
+    </div>
+
     <footer class="py-4 mt-4">
       <div class="container d-flex flex-column flex-md-row align-items-center justify-content-between gap-2">
         <div class="text-muted small">
