--- a/gerente.html
+++ b/gerente.html
@@ -145,7 +145,8 @@
       </div>
     </nav>
 
-    <section id="gerente" class="py-5 bg-brand-soft border-bottom">
+    <div class="main-content">
+      <section id="gerente" class="py-5 bg-brand-soft border-bottom">
       <div class="container">
         <div class="row align-items-center g-4 mb-3">
           <div class="col-12 col-md-8">
@@ -565,6 +566,7 @@
           </div>
         </div>
       </div>
+    </div>
     </div>
 
     <footer class="py-4 mt-4">
