--- a/config.html
+++ b/config.html
@@ -21,6 +21,31 @@
 
     <!-- Sistema de Autenticação -->
     <script src="assets/js/auth.js"></script>
+    <script>
+      document.addEventListener('DOMContentLoaded', function() {
+        try {
+          var user = null;
+          var userData = sessionStorage.getItem('swift_user') || localStorage.getItem('swift_user');
+          if (userData) user = JSON.parse(userData);
+          if (user && user.role === 'gerente') {
+            var navLinks = document.querySelectorAll('a.nav-link');
+            navLinks.forEach(function(link) {
+              var txt = link.textContent.trim();
+              if (txt === 'Ranking' || txt === 'Missões' || txt === 'Trilha de Aprendizagem') {
+                link.style.display = 'none';
+              }
+            });
+            var userMenuLinks = document.querySelectorAll('.dropdown-menu a.dropdown-item');
+            userMenuLinks.forEach(function(link) {
+              var txt = link.textContent.trim();
+              if (txt.includes('Histórico')) {
+                link.style.display = 'none';
+              }
+            });
+          }
+        } catch(e) { console.warn('Erro ao ocultar navegação para gerente:', e); }
+      });
+    </script>
     <!-- Sistema de Avatar -->
     <script src="assets/js/avatar.js"></script>
     <script>
@@ -36,6 +61,7 @@
       <div class="container">
         <a
           class="navbar-brand d-flex align-items-center gap-2"
+          id="swiftproLogo"
           href="index.html"
         >
           <i class="bi bi-fire text-brand"></i>
@@ -64,6 +90,26 @@
           </div>
           <div class="offcanvas-body">
             <ul class="navbar-nav ms-auto align-items-lg-center gap-lg-3">
+              <li class="nav-item">
+                <a class="nav-link" href="ranking.html">Ranking</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="missoes.html">Missões</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="plano.html">Trilha de Aprendizagem</a>
+              </li>
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        const user = window.getCurrentUser && window.getCurrentUser();
+        if (user && user.role === "estoquista") {
+          const navIndex = document.getElementById("navIndexColaborador");
+          if (navIndex) navIndex.style.display = "none";
+          const logo = document.getElementById("swiftproLogo");
+          if (logo) logo.setAttribute("href", "estoquista.html");
+        }
+      });
+    </script>
               <!-- Itens removidos para visão do gerente -->
               <li class="nav-item">
                 <a class="nav-link" href="gerente.html">Área do Gerente</a>
