--- a/estoquista.html
+++ b/estoquista.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>SwiftPro – Estoquista Davi</title>
+  <title>SwiftPro – Estoquista Ana Silva</title>
     <link
       rel="shortcut icon"
       href="assets/images/favicon.ico.svg"
@@ -60,9 +60,6 @@
           </div>
           <div class="offcanvas-body">
             <ul class="navbar-nav ms-auto align-items-lg-center gap-lg-3">
-              <li class="nav-item">
-                <a class="nav-link" href="estoquista.html">Estoquista</a>
-              </li>
               <li class="nav-item">
                 <a class="nav-link" href="ranking.html">Ranking</a>
               </li>
@@ -131,7 +128,7 @@
                   aria-expanded="false"
                 >
                   <img
-                    src="https://randomuser.me/api/portraits/men/32.jpg"
+                    src="https://randomuser.me/api/portraits/women/32.jpg"
                     alt="Avatar do usuário"
                     width="32"
                     height="32"
@@ -139,14 +136,14 @@
                     data-user-avatar
                   />
                   <span class="d-none d-lg-inline-block" data-user-name
-                    >Davi Sousa</span
+                    >Ana Silva</span
                   >
                 </a>
                 <ul class="dropdown-menu text-small">
                   <li class="dropdown-header">
-                    <div class="fw-semibold" data-user-name>Davi Sousa</div>
+                    <div class="fw-semibold" data-user-name>Ana Silva</div>
                     <small class="text-muted" data-user-email
-                      >davi.sousa@swift.com</small
+                      >ana.silva@swift.com</small
                     >
                     <small class="text-muted d-block" data-user-role
                       >Estoquista</small
@@ -185,13 +182,13 @@
               <div class="card soft-shadow mb-4">
                 <div class="card-body d-flex align-items-center gap-3">
                   <img
-                    src="https://randomuser.me/api/portraits/men/32.jpg"
+                    src="https://randomuser.me/api/portraits/women/32.jpg"
                     alt="Avatar do Estoquista"
                     class="avatar-xl"
                   />
                   <div>
                     <div class="d-flex align-items-center gap-2">
-                      <h1 class="h4 m-0">Davi Sousa (Estoquista)</h1>
+                      <h1 class="h4 m-0">Ana Silva (Estoquista)</h1>
                       <span class="badge badge-level">Prata</span>
                     </div>
                     <div class="text-muted small">
@@ -506,6 +503,53 @@
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
       <script src="assets/js/main.js"></script>
+    <!-- Abrir disputa (colaborador) -->
+    <div
+      class="modal fade"
+      id="abrirDisputaModal"
+      tabindex="-1"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Abrir disputa</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Fechar"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <form
+              class="row g-3"
+              onsubmit="event.preventDefault(); alert('Disputa aberta. Aguardando gerente.');"
+            >
+              <div class="col-12">
+                <label class="form-label">Tipo</label>
+                <select class="form-select" required>
+                  <option>Venda não pontuada</option>
+                  <option>Missão rejeitada</option>
+                  <option>Ajuste indevido</option>
+                </select>
+              </div>
+              <div class="col-12">
+                <label class="form-label">Descrição</label>
+                <textarea class="form-control" rows="3" required></textarea>
+              </div>
+              <div class="col-12">
+                <label class="form-label">Anexos</label>
+                <input type="file" class="form-control" multiple />
+              </div>
+              <div class="col-12">
+                <button class="btn btn-primary w-100">Enviar disputa</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
 
       <!-- ...existing code... -->
     </div>
