--- a/historico.html
+++ b/historico.html
@@ -34,6 +34,7 @@
       <div class="container">
         <a
           class="navbar-brand d-flex align-items-center gap-2"
+          id="swiftproLogo"
           href="index.html"
         >
           <i class="bi bi-fire text-brand"></i>
